# serialization

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
include/: serialize.h  typeid.h  visit_member.h
tests/: CMakeLists.txt  arithmetic.cpp  pointer.cpp  string.cpp  struct.cpp  test_pointer.cpp  test_struct.cpp  test_visit_member.cpp  visit_member.cpp
